# kanidm-admin

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  PARTIALS.md  README.md  TODO.md  kanidm-admin-ui.example.toml  package.json  tsconfig.json
deploy/: .gitignore  SETUP.md  bootstrap.sh  docker-compose.yml
design/: 01-login-username.html  02-login-choose-mech.html  03-login-password.html  04-login-totp.html  05-login-backup-code.html  06-login-passkey.html  07-login-denied.html  08-reauth-modal.html  10-dashboard.html  20-people-list.html  21-people-create.html  22-people-detail.html  23-people-edit.html  24-people-credentials.html  25-people-ssh-keys.html  26-people-radius.html  27-people-sessions.html  28-people-validity.html  29-people-delete.html  40-groups-list.html  41-groups-create.html  42-groups-detail.html  43-groups-edit.html  44-groups-members.html  45-groups-account-policy.html  46-groups-delete.html  60-oauth2-list.html  61-oauth2-create.html  62-oauth2-detail.html  63-oauth2-general.html  64-oauth2-secret.html  65-oauth2-scope-maps.html  66-oauth2-claim-maps.html  67-oauth2-crypto.html  68-oauth2-image.html  69-oauth2-advanced.html  6A-oauth2-delete.html  80-self.html  81-sessions.html  README.md  (+1 more)
islands/: command_palette.tsx  dropdown.tsx  entry.ts  pagination.tsx  toast.tsx
scripts/: build-icons.ts
src/: auth.rs  config.rs  error.rs  main.rs
styles/: app.css  tokens.css
templates/: base.html  dashboard.html  error_forbidden.html  error_not_found.html  error_server.html  error_unauthenticated.html  (+3 more)
(+223 files in other folders)
